feat: add decline appointment feature
